# Goroda

./: CMakeLists.txt  README.md  goroda.cpp
scripts/: build.sh
src/: CMakeLists.txt
src/city_game/: CMakeLists.txt  city_game.cpp
src/city_game/include/city_game/: city_game.h
src/city_reader/: CMakeLists.txt  city_reader.cpp
src/city_reader/include/city_reader/: city_reader.h
tests/: CMakeLists.txt  goroda_test.cpp  run_test.sh
